[package]
name = "day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
regex = { version = "1.9", default-features = false, features = ["std"] }
